move picom animation options to picom.conf

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -208,6 +208,13 @@ blur-background-exclude = [
 ];
 
 #################################
+#          Animations           #
+#################################
+
+animations = true;
+animation-for-open-window = "zoom";
+
+#################################
 #       General Settings        #
 #################################
 
