--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -164,41 +164,15 @@ rounded-corners-exclude = [
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-blur-background = true;
-blur-background-fixed = true;
+blur-background = false;
+blur-background-fixed = false;
 blur: {
     kern = "3x3box";
     method = "kernel";
     size = 12;
-    strength = 2;
+    strength = 4;
     deviation = 5.0;
 };
-
-# Blur background of semi-transparent / ARGB windows.
-# Bad in performance, with driver-dependent behavior.
-# The name of the switch may change without prior notifications.
-#
-
-
-# Blur background of windows when the window frame is not opaque.
-# Implies:
-#    blur-background
-# Bad in performance, with driver-dependent behavior. The name may change.
-#
-# blur-background-frame = false
-
-
-# Use fixed blur strength rather than adjusting according to window opacity.
-# blur-background-fixed = false
-
-
-# Specify the blur convolution kernel, with the following format:
-# example:
-#   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
-#
-# blur-kern = ""
-blur-kern = "3x3box";
-
 
 # Exclude conditions for background blur.
 # blur-background-exclude = []
@@ -213,6 +187,8 @@ blur-background-exclude = [
 
 animations = true;
 animation-for-open-window = "zoom";
+animation-stiffness = 200;
+animation-dampening = 25;
 
 #################################
 #       General Settings        #
@@ -235,7 +211,6 @@ backend = "glx";
 dithered-present = false;
 
 # Enable/disable VSync.
-# vsync = false
 vsync = true;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
