--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,9 @@
 [submodule "awesome/vicious"]
 	path = awesome/vicious
 	url = https://github.com/vicious-widgets/vicious.git
+[submodule "awesome/--init"]
+	path = awesome/--init
+	url = https://github.com/BlingCorp/bling.git
+[submodule "awesome/bling"]
+	path = awesome/bling
+	url = https://github.com/BlingCorp/bling.git
