--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -1,40 +1,28 @@
 # See this wiki page for more info:
 # https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
-    info title
-    info underline
-
-    info "OS" distro
-    # info "Host" model
-    info "Kernel" kernel
-    # info "Uptime" uptime
-    # info "Packages" packages
-    # info "Resolution" resolution
-    info "DE" de
-    info "WM" wm
-    # info "WM Theme" wm_theme
-    info "Theme" theme
-    # info "Icons" icons
-    info "Terminal" term
-    info "Shell" shell
-    # info "Terminal Font" term_font
-    # info "CPU" cpu
-    # info "GPU" gpu
-    # info "Memory" memory
-
-    # info "GPU Driver" gpu_driver  # Linux/macOS only
-    # info "CPU Usage" cpu_usage
-    # info "Disk" disk
-    # info "Battery" battery
-    # info "Font" font
-    # info "Song" song
-    # [[ "$player" ]] && prin "Music Player" "$player"
-    # info "Local IP" local_ip
-    # info "Public IP" public_ip
-    # info "Users" users
-    # info "Locale" locale  # This only works on glibc systems.
-
-    info cols
+    prin "$(color 2)╭─────────────────────────────────────────────"
+    info "$(color 2)│\n \n \n \n \n \n \n \n \n \n \n \n \n" title
+    prin "$(color 2)╰─────────────────────────────────────────────╮"
+    prin "\n \n \n \n \n \n \n \n \n \n \n \n \n \n \n $(color 1)󰲠─$(color 2)󰲢─$(color 3)󰲤─$(color 4)󰲦─$(color 5)󰲨─$(color 6)󰲪─$(color 7)󰲬─$(color 8)󰲮$(color 2)────────────────┤"
+    prin "$(color 2)╭─────────────────────────────────────────────╯"
+    info "$(color 7) $(color 6)OS┄┄┄┄┄┄┄┄┄→$(color 7)" os
+    info "$(color 2)│ $(color 6)├─Distro┄┄┄→$(color 7)" distro
+    info "$(color 2)│ $(color 6)├─Kernel┄┄┄→$(color 7)" kernel
+    info "$(color 2)│ $(color 6)╰─Shell┄┄┄┄→$(color 7)" shell
+    prin "$(color 2)│"
+    info "$(color 7)󰖯 $(color 6)DE/WM┄┄┄┄┄┄→$(color 7)" wm
+    info "$(color 2)│ $(color 6)├─Terminal┄→$(color 7)" term
+    info "$(color 2)│ $(color 6)├─Theme┄┄┄┄→$(color 7)" theme
+    info "$(color 2)│ $(color 6)├─WM Theme┄→$(color 7)" wm_theme
+    info "$(color 2)│ $(color 6)╰─Icons┄┄┄┄→$(color 7)" icons
+    prin "$(color 2)│"
+    info "$(color 7) $(color 6)PC┄┄┄┄┄┄┄┄┄→$(color 7)" hostname
+    info "$(color 2)│ $(color 6)├─UP┄┄┄┄┄┄┄→$(color 7)" uptime
+    info "$(color 2)│ $(color 6)├─CPU┄┄┄┄┄┄→$(color 7)" cpu
+    info "$(color 2)│ $(color 6)├─GPU┄┄┄┄┄┄→$(color 7)" gpu
+    info "$(color 2)│ $(color 6)╰─Mem┄┄┄┄┄┄→$(color 7)" memory
+    prin "$(color 2)╰─────────────────────────────────────────────"
 }
 
 # Title
@@ -195,7 +183,7 @@ speed_type="bios_limit"
 # Example:
 # on:    'i7-6500U (4) @ 3.1GHz'
 # off:   'i7-6500U (4) @ 3.100GHz'
-speed_shorthand="off"
+speed_shorthand="on"
 
 # Enable/Disable CPU brand in output.
 #
@@ -206,7 +194,7 @@ speed_shorthand="off"
 # Example:
 # on:   'Intel i7-6500U'
 # off:  'i7-6500U (4)'
-cpu_brand="on"
+cpu_brand="off"
 
 # CPU Speed
 # Hide/Show CPU speed.
@@ -218,7 +206,7 @@ cpu_brand="on"
 # Example:
 # on:  'Intel i7-6500U (4) @ 3.1GHz'
 # off: 'Intel i7-6500U (4)'
-cpu_speed="on"
+cpu_speed="off"
 
 # CPU Cores
 # Display CPU cores in output
@@ -232,7 +220,7 @@ cpu_speed="on"
 # logical:  'Intel i7-6500U (4) @ 3.1GHz' (All virtual cores)
 # physical: 'Intel i7-6500U (2) @ 3.1GHz' (All physical cores)
 # off:      'Intel i7-6500U @ 3.1GHz'
-cpu_cores="logical"
+cpu_cores="off"
 
 # CPU Temperature
 # Hide/Show CPU temperature.
@@ -264,7 +252,7 @@ cpu_temp="off"
 # Example:
 # on:  'AMD HD 7950'
 # off: 'HD 7950'
-gpu_brand="on"
+gpu_brand="off"
 
 # Which GPU to display
 #
@@ -283,7 +271,7 @@ gpu_brand="on"
 #
 # integrated:
 #   GPU1: Intel Integrated Graphics
-gpu_type="all"
+gpu_type="dedicated"
 
 
 # Resolution
@@ -551,7 +539,7 @@ underline_enabled="on"
 # Default:  '-'
 # Values:   'string'
 # Flag:     --underline_char
-underline_char="-"
+underline_char="─"
 
 
 # Info Separator
@@ -563,7 +551,7 @@ underline_char="-"
 # Example:
 # separator="->":   'Shell-> bash'
 # separator=" =":   'WM = dwm'
-separator=":"
+separator=" "
 
 
 # Color Blocks
