--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -46,7 +46,6 @@ shadow-exclude = [
   "name = 'Notification'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
-  "_GTK_FRAME_EXTENTS@:c",
 ];
 
 # Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
@@ -75,120 +74,47 @@ shadow-exclude = [
 fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
-# fade-in-step = 0.028
-fade-in-step = 0.03;
+fade-in-step = 0.01
+#fade-in-step = 1.0;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
 # fade-out-step = 0.03
-fade-out-step = 0.03;
+#fade-out-step = 1.0;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-# fade-delta = 10
+fade-delta = 10
 
 # Specify a list of conditions of windows that should not be faded.
-# fade-exclude = []
+fade-exclude = []
 
 # Do not fade on window open/close.
-# no-fading-openclose = false
+no-fading-openclose = false
 
 # Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
-# no-fading-destroyed-argb = false
-
-
-#################################
-#   Transparency / Opacity      #
-#################################
-
-
-# Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-inactive-opacity = 0.9;
-
-# Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
-frame-opacity = 1.0
-
-# Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
-# inactive-opacity-override = true
-inactive-opacity-override = false;
-
-# Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-active-opacity = 0.95
-
-# Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-# inactive-dim = 0.0
-
-# Specify a list of conditions of windows that should never be considered focused.
-# focus-exclude = []
-focus-exclude = [
-    "class_g = 'Cairo-clock'",
-];
-
-# Use fixed inactive dim value, instead of adjusting according to window opacity.
-# inactive-dim-fixed = 1.0
-
-# Specify a list of opacity rules, in the format `PERCENT:PATTERN`,
-# like `50:name *= "Firefox"`. picom-trans is recommended over this.
-# Note we don't make any guarantee about possible conflicts with other
-# programs that set '_NET_WM_WINDOW_OPACITY' on frame or client windows.
-# example:
-opacity-rule = [
-    "100:class_g *= 'Minecraft'",
-    "100:_NET_WM_STATE@[0]:32a = '_NET_WM_STATE_FULLSCREEN'",
-    "100:_NET_WM_STATE@[1]:32a = '_NET_WM_STATE_FULLSCREEN'",
-    "100:_NET_WM_STATE@[2]:32a = '_NET_WM_STATE_FULLSCREEN'",
-    "100:_NET_WM_STATE@[3]:32a = '_NET_WM_STATE_FULLSCREEN'",
-    "100:_NET_WM_STATE@[4]:32a = '_NET_WM_STATE_FULLSCREEN'",
-];
-
-
-#################################
-#           Corners             #
-#################################
-
-# Sets the radius of rounded window corners. When > 0, the compositor will
-# round the corners of windows. Does not interact well with
-# `transparent-clipping`.
-corner-radius = 20
-
-# Exclude conditions for rounded corners.
-rounded-corners-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'",
-  "class_g = 'awesome'",
-  "class_g = 'Rofi'",
-];
-
+no-fading-destroyed-argb = true
 
 #################################
 #     Background-Blurring       #
 #################################
 
-
-# Parameters for background blurring, see the *BLUR* section for more information.
-blur-background = false;
-blur-background-fixed = false;
 blur: {
-    kern = "3x3box";
-    method = "kernel";
-    size = 12;
-    strength = 4;
-    deviation = 5.0;
+    method = "dual_kawase";
+    strength = 2;
 };
-
-# Exclude conditions for background blur.
-# blur-background-exclude = []
-blur-background-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'",
-];
 
 #################################
 #          Animations           #
 #################################
 
-animations = true;
-animation-for-open-window = "zoom";
-animation-stiffness = 200;
-animation-dampening = 25;
+animations: true;
+animation-stiffness = 95
+animation-window-mass = 1
+animation-dampening = 12
+animation-clamping = false
+animation-for-open-window = "slide-down"; #open window
+animation-for-unmap-window = "slide-up"; #minimize window
+animation-for-workspace-switch-in = "zoom"; #the windows in the workspace that is coming in
+animation-for-workspace-switch-out = "zoom"; #the windows in the workspace that are coming out
 
 #################################
 #       General Settings        #
@@ -415,8 +341,8 @@ log-level = "warn";
 wintypes:
 {
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
-  dock = { shadow = false; clip-shadow-above = true; blur-background = true; }
+  dock = { shadow = false; fade = false; clip-shadow-above = true; blur-background = false; }
   dnd = { shadow = false; }
-  popup_menu = { opacity = 0.8; }
+  popup_menu = { shadow = false; opacity = 1.0; fade = true; clip-shadow-above = true; focus = true; }
   dropdown_menu = { opacity = 0.8; }
 };
