control panel, (almost) no more icons, instead just use unicode chars

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "awesome/bling"]
 	path = awesome/bling
 	url = https://github.com/BlingCorp/bling.git
+[submodule "awesome/rubato"]
+	path = awesome/rubato
+	url = https://github.com/andOrlando/rubato.git
