--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -345,4 +345,5 @@ wintypes:
   dnd = { shadow = false; }
   popup_menu = { shadow = false; opacity = 1.0; fade = true; clip-shadow-above = true; focus = true; }
   dropdown_menu = { opacity = 0.8; }
+  notification = { fade = true; shadow = false; opacity = 0.9; };
 };
