--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -6,22 +6,22 @@ print_info() {
     prin "$(color 2)╰─────────────────────────────────────────────╮"
     prin "\n \n \n \n \n \n \n \n \n \n \n \n \n \n \n $(color 1)󰲠─$(color 2)󰲢─$(color 3)󰲤─$(color 4)󰲦─$(color 5)󰲨─$(color 6)󰲪─$(color 7)󰲬─$(color 8)󰲮$(color 2)────────────────┤"
     prin "$(color 2)╭─────────────────────────────────────────────╯"
-    info "$(color 7) $(color 6)OS┄┄┄┄┄┄┄┄┄→$(color 7)" os
-    info "$(color 2)│ $(color 6)├─Distro┄┄┄→$(color 7)" distro
-    info "$(color 2)│ $(color 6)├─Kernel┄┄┄→$(color 7)" kernel
-    info "$(color 2)│ $(color 6)╰─Shell┄┄┄┄→$(color 7)" shell
+    info "$(color 7) $(color 6)OS$(color 7)" os
+    info "$(color 2)│ $(color 6)├─Distro$(color 7)" distro
+    info "$(color 2)│ $(color 6)├─Kernel$(color 7)" kernel
+    info "$(color 2)│ $(color 6)╰─Shell$(color 7)" shell
     prin "$(color 2)│"
-    info "$(color 7)󰖯 $(color 6)DE/WM┄┄┄┄┄┄→$(color 7)" wm
-    info "$(color 2)│ $(color 6)├─Terminal┄→$(color 7)" term
-    info "$(color 2)│ $(color 6)├─Theme┄┄┄┄→$(color 7)" theme
-    info "$(color 2)│ $(color 6)├─WM Theme┄→$(color 7)" wm_theme
-    info "$(color 2)│ $(color 6)╰─Icons┄┄┄┄→$(color 7)" icons
+    info "$(color 7) $(color 6)DE/WM$(color 7)" wm
+    info "$(color 2)│ $(color 6)├─Terminal$(color 7)" term
+    info "$(color 2)│ $(color 6)├─Theme$(color 7)" theme
+    info "$(color 2)│ $(color 6)├─WM Theme$(color 7)" wm_theme
+    info "$(color 2)│ $(color 6)╰─Icons$(color 7)" icons
     prin "$(color 2)│"
-    info "$(color 7) $(color 6)PC┄┄┄┄┄┄┄┄┄→$(color 7)" hostname
-    info "$(color 2)│ $(color 6)├─UP┄┄┄┄┄┄┄→$(color 7)" uptime
-    info "$(color 2)│ $(color 6)├─CPU┄┄┄┄┄┄→$(color 7)" cpu
-    info "$(color 2)│ $(color 6)├─GPU┄┄┄┄┄┄→$(color 7)" gpu
-    info "$(color 2)│ $(color 6)╰─Mem┄┄┄┄┄┄→$(color 7)" memory
+    info "$(color 7) $(color 6)PC$(color 7)" hostname
+    info "$(color 2)│ $(color 6)├─UP$(color 7)" uptime
+    info "$(color 2)│ $(color 6)├─CPU$(color 7)" cpu
+    info "$(color 2)│ $(color 6)├─GPU$(color 7)" gpu
+    info "$(color 2)│ $(color 6)╰─Mem$(color 7)" memory
     prin "$(color 2)╰─────────────────────────────────────────────"
 }
 
