picom: increase blur strength

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -99,7 +99,7 @@ no-fading-destroyed-argb = true
 
 blur: {
     method = "dual_kawase";
-    strength = 2;
+    strength = 6;
 };
 
 #################################
@@ -338,10 +338,9 @@ log-level = "warn";
 #     set, and doesn't want certain window to cause unnecessary screen redirection,
 #     you can set this to `true`.
 #
-wintypes:
-{
+wintypes: {
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
-  dock = { shadow = false; fade = false; clip-shadow-above = true; blur-background = false; }
+  dock = { shadow = false; opacity = 0.9; fade = false; clip-shadow-above = true; blur-background = false; }
   dnd = { shadow = false; }
   popup_menu = { shadow = false; opacity = 1.0; fade = true; clip-shadow-above = true; focus = true; }
   dropdown_menu = { opacity = 0.8; }
