--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,163 +1,65 @@
-#################################
-#             Shadows           #
-#################################
+animations = true;
+animation-stiffness = 120;
+animation-window-mass = 1.5;
+animation-dampening = 30;
+animation-clamping = false;
+animation-for-open-window = "zoom"; # standard window open animation
+animation-for-unmap-window = "slide-out"; # standard window close animation
+animation-for-transient-window = "slide-down"; # for non standard windows, also check wintypes
+animation-for-tag-change = "slide-left"; # or slide-top
+# animation-extra-desktops = 0; # ignore the last X desktops at the end of the WM reported list
+enable-fading-next-tag = true;
+enable-fading-prev-tag = true;
 
-
-# Enabled client-side shadows on windows. Note desktop windows
-# (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow,
-# unless explicitly requested using the wintypes option.
-#
-shadow = true;
-
-# The blur radius for shadows, in pixels. (defaults to 12)
-shadow-radius = 20
-
-# The left offset for shadows, in pixels. (defaults to -15)
-shadow-offset-x = -20
-
-# The top offset for shadows, in pixels. (defaults to -15)
-shadow-offset-y = -20
-
-shadow-exclude = [ ];
-
-#################################
-#           Fading              #
-#################################
-
-
-# Fade windows in/out when opening/closing and when opacity changes,
-#  unless no-fading-openclose is used.
-# fading = false
-fading = true;
-
-# Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
-fade-in-step = 0.03
-
-# Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
-fade-out-step = 0.03
-
-# The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-fade-delta = 5;
-
-# Specify a list of conditions of windows that should not be faded.
-fade-exclude = [];
-
-# Do not fade on window open/close.
-no-fading-openclose = false;
-
-# Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
-no-fading-destroyed-argb = false;
-
-#################################
-#       Rounded Corners         #
-#################################
-
-corner-radius = 0;
-
-corners-rule = [
-    "0:class_g = 'awesome'",
-    "20:class_g = 'Rofi'",
+animation-exclude = [
+    "class_g = 'awesome' && window_type != 'notification'"
 ];
 
-#################################
-#          Animations           #
-#################################
+shadow = true;
 
-animations: true;
-animation-stiffness = 120;
-animation-window-mass = 2;
-animation-dampening = 24;
-animation-clamping = false;
-animation-for-open-window = "slide-up"; #open window
-animation-for-unmap-window = "slide-down"; #minimize window
+shadow-radius = 14;
 
-animation-open-exclude = [ "class_g = 'awesome'" ];
-animation-unmap-exclude = [ "class_g = 'awesome'" ];
+shadow-offset-x = -14;
+shadow-offset-y = -14;
 
+shadow-exclude = [
+  "name = 'Notification'",
+  "class_g = 'Conky'",
+  "class_g ?= 'Notify-osd'",
+  "class_g = 'Cairo-clock'",
+  "_GTK_FRAME_EXTENTS@:c"
+];
 
-#################################
-#       General Settings        #
-#################################
+crop-shadow-to-monitor = true
 
 
-# Daemonize process. Fork to background after initialization. Causes issues with certain (badly-written) drivers.
-daemon = true;
+fading = true;
+fade-in-step = 0.04;
+fade-out-step = 0.03;
 
-# Specify the backend to use: `xrender`, `glx`, `egl` or `xr_glx_hybrid`.
-# `xrender` is the default one.
-#
-backend = "glx";
+inactive-dim = 0.075;
 
-# Use higher precision during rendering, and apply dither when presenting the
-# rendered screen. Reduces banding artifacts, but might cause performance
-# degradation. Only works with OpenGL.
+corner-radius = 14
+rounded-corners-exclude = [
+  "window_type = 'dock'",
+  "window_type = 'desktop'",
+  "class_g = 'awesome' && window_type != 'notification' && window_type != 'dropdown_menu'"
+];
+
+dbus = true;
+backend = "egl";
 dithered-present = false;
-
-# Enable/disable VSync.
 vsync = true;
-
-# Try to detect WM windows (a non-override-redirect window with no
-# child that has 'WM_STATE') and mark them as active.
-#
-# mark-wmwin-focused = false
 mark-wmwin-focused = true;
-
-# Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
-# mark-ovredir-focused = false
 mark-ovredir-focused = true;
-
+detect-client-opacity = true;
+detect-transient = true;
 use-damage = true;
 
-log-level = "warn";
-
 wintypes: {
-  tooltip = {
-    fade = true;
-    shadow = false;
-    opacity = 1.0;
-    focus = true;
-    full-shadow = false;
-    blur-background = true;
-  };
-  dock = {
-    shadow = false;
-    opacity = 1.0;
-    fade = false;
-    clip-shadow-above = true;
-    blur-background = true;
-  };
-  dnd = {
-    shadow = false;
-  };
-  popup_menu = {
-    shadow = true;
-    opacity = 1.0;
-    fade = true;
-    clip-shadow-above = false;
-    focus = true;
-    animation = "none";
-    animation-unmap = "none";
-  };
-  dropdown_menu = {
-    opacity = 1.0;
-    blur-background = false;
-  };
-  menu = {
-    animation = "none";
-    animation-unmap = "none";
-    shadow-radius = 10;
-    shadow-offset-x = 10;
-    shadow-offset-y = 10;
-  };
-  notification = {
-    fade = true;
-    shadow = true;
-    animation = "zoom";
-    animation-unmap = "zoom";
-  };
-  utility = {
-    fade = false;
-    animation = "none";
-    animation-unmap = "none";
-  };
+  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+  dock = { shadow = false; clip-shadow-above = true; };
+  dnd = { shadow = false; };
+  popup_menu = { opacity = 1; };
+  dropdown_menu = { opacity = 1; };
 };
