--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -3,7 +3,7 @@ animation-stiffness = 120;
 animation-window-mass = 1.5;
 animation-dampening = 30;
 animation-clamping = false;
-animation-for-open-window = "zoom"; # standard window open animation
+animation-for-open-window = "slide-up"; # standard window open animation
 animation-for-unmap-window = "slide-out"; # standard window close animation
 animation-for-transient-window = "slide-down"; # for non standard windows, also check wintypes
 animation-for-tag-change = "slide-left"; # or slide-top
@@ -12,7 +12,7 @@ enable-fading-next-tag = true;
 enable-fading-prev-tag = true;
 
 animation-exclude = [
-    "class_g = 'awesome' && window_type != 'notification'"
+    "class_g = 'awesome' && window_type != 'notification' && window_type != 'normal'"
 ];
 
 shadow = true;
@@ -21,14 +21,9 @@ shadow-radius = 14;
 
 shadow-offset-x = -14;
 shadow-offset-y = -14;
+shadow-opacity = 0.5;
 
-shadow-exclude = [
-  "name = 'Notification'",
-  "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
-  "class_g = 'Cairo-clock'",
-  "_GTK_FRAME_EXTENTS@:c"
-];
+shadow-exclude = [ "class_g != 'awesome' && window_type = 'menu'", ];
 
 crop-shadow-to-monitor = true
 
@@ -47,7 +42,7 @@ rounded-corners-exclude = [
 ];
 
 dbus = true;
-backend = "egl";
+backend = "glx";
 dithered-present = false;
 vsync = true;
 mark-wmwin-focused = true;
@@ -62,4 +57,5 @@ wintypes: {
   dnd = { shadow = false; };
   popup_menu = { opacity = 1; };
   dropdown_menu = { opacity = 1; };
+  menu = { shadow = false; };
 };
