--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,13 +45,12 @@ set -g @catppuccin_window_current_fill "all"
 set -g @catppuccin_window_current_text "#W"
 
 set -g @catppuccin_status_modules_left "session"
-set -g @catppuccin_status_modules_right "directory"
+set -g @catppuccin_status_modules_right "none"
 set -g @catppuccin_status_left_separator " "
 set -g @catppuccin_status_right_separator " "
 set -g @catppuccin_status_fill "all"
 set -g @catppuccin_status_connect_separator "no"
 
-set -g @catppuccin_directory_text "#{pane_current_path}"
 set -g @catppuccin_status_background "default"
 set -g @catppuccin_status_justify "left"
 
