tmux: 1-based indexing aka retarded indexing

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,10 @@ set -g mouse on
 # move the statusbar to the top
 set-option -g status-position top
 
+# Set default indices to 1
+set -g base-index 1
+setw -g pane-base-index 1
+
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
 
