alacritty: disable dynamic padding

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -361,7 +361,7 @@ program = "/bin/zsh"
 
 [window]
 decorations = "full"
-dynamic_padding = true
+dynamic_padding = false
 dynamic_title = true
 startup_mode = "Windowed"
 
