fix these stupid ass tmux copy mode bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,10 @@ bind l selectw -n
 bind C-h selectw -p
 bind C-l selectw -n
 
+# fix these stupid ass tmux copy mode bindings
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
 # enable mouse
 set -g mouse on
 
