--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,26 +40,18 @@ set-option -ga terminal-overrides "alacritty:Tc"
 
 # catppuccin
 set -g @plugin 'catppuccin/tmux'
+run '~/.tmux/plugins/tmux/catppuccin.tmux'
+
 set -g @catppuccin_flavour 'mocha'
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " "
 set -g @catppuccin_window_number_position "left"
+set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_window_text " #{pane_current_command}"
+set -g @catppuccin_window_current_text "#{pane_current_command}"
+set -g @catppuccin_window_current_text_color "fg=#{@thm_crust},bold,bg=#{@thm_mauve}"
 
-set -g @catppuccin_window_default_fill "none"
-set -g @catppuccin_window_default_text "#W"
+set -g status-left "#{E:@catppuccin_status_session}"
+set -g status-right ""
 
-set -g @catppuccin_window_current_fill "all"
-set -g @catppuccin_window_current_text "#W"
-
-set -g @catppuccin_status_modules_left "session"
-set -g @catppuccin_status_modules_right "none"
-set -g @catppuccin_status_left_separator " "
-set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_fill "all"
-set -g @catppuccin_status_connect_separator "no"
-
-set -g @catppuccin_status_background "default"
-set -g @catppuccin_status_justify "left"
+set-option -g default-shell /bin/zsh
 
 run '~/.tmux/plugins/tpm/tpm'
