--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,7 @@ bind C-h selectw -p
 bind C-l selectw -n
 
 # fix these stupid ass tmux copy mode bindings
+set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
